--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 resilience4j.retry.instances.sample-api.max-attempts=5
 resilience4j.retry.instances.sample-api.wait-duration=1s
 resilience4j.retry.instances.sapmle-api.enable-exponential-backoff=true
+
+resilience4j.ratelimiter.instances.default.limit-for-period=2
+resilience4j.ratelimiter.instances.default.limit-refresh-period=10s
