--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ resilience4j.retry.instances.sapmle-api.enable-exponential-backoff=true
 
 resilience4j.ratelimiter.instances.default.limit-for-period=2
 resilience4j.ratelimiter.instances.default.limit-refresh-period=10s
+
+#configure the amount of the requests  traced
+spring.sleuth.sampler.probability=1.0
